--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,2 +1,45 @@
+  .card {
+    position: relative;
+    width: 500px;
+    height: 300px;
+    border: none;
+    overflow: cover;
+    text-align: center;
+  }
+  
+  .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 10;
+  }
+  
+  .card-title {
+    position: absolute;
+    top: 50%;
+    left: 27%;
+    text-align: center;
+    padding: 10px 20px;
+    background: rgba(255, 255, 255, 0.422);
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #160f0f !important;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.562);
+  }
 
-
+  .card-text{
+    position: absolute;
+    top:42%;
+    left: 37%;
+    font-size: 40px;
+    color: white;
+    font-weight: bold;
+  }
+  
+  .col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+  }
