falta arreglar las tarjetas

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,11 +1,11 @@
 .navbar{
-    background-color:#D5C7A3 ;
+    background-color:#d7ccb1 ;
 }
 .lupa-icono{
    color: black;
 }
 .dropdown{
-    background-color:#D5C7A3 ;
+    background-color:#d7ccb1 ;
 
 }
 
